--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@ baseurl: "/rapa" # the subpath of your site, e.g. /blog/
 url: https://github.com/lpzun # the base hostname & protocol for your site
 git_address: https://github.com/lpzun/rapa
 git_edit_address: https://github.com/lpzun/rapa/gh-pages
-
+forum_address: https://groups.google.com/forum/#!forum/rapa-neu
+issue_tracker: https://github.com/lpzun/rapa/issues
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
 bootwatch: cerulean
